# MonteCarloSim

./: CMakeLists.txt  FindROOT.cmake  OpNovice2.cc  README.md  vis.mac
analysis/: SinglesBG_OpNovice2.C  batch_1_sample.root
include/: ActionInitialization.hh  DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  G4AnalysisManager.hh  G4VisAttributes.hh  HistoManager.hh  OutputManager.hh  OutputMessenger.hh  PhysicsList.hh  PhysicsListMessenger.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  RealDetectorHit.hh  RealDetectorSD.hh  VirtualDetectorHit.hh  VirtualDetectorSD.hh
macros/: Evgen.C  OpNovice2.mac  batch_beam.mac  batch_root.mac  rootlogon.C  testgen.root  vis_beam.mac  vis_root.mac
macros/cteq/: Makefile  Makefile~
src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  HistoManager.cc  OutputManager.cc  OutputMessenger.cc  PhysicsList.cc  PhysicsListMessenger.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  RealDetectorHit.cc  RealDetectorSD.cc  Run.cc  RunAction.cc  SteppingAction.cc  VirtualDetectorHit.cc  VirtualDetectorSD.cc
